be/src/exec/row-batch-list-test.cc
@@ -104,12 +104,23 @@ TEST_F(RowBatchListTest, BasicTest) {
 
 // This tests an empty batch is handled correctly.
 TEST_F(RowBatchListTest, EmptyBatchTest) {
+  const int ALLOC_SIZE = 128;
   RowBatchList row_list;
-  RowBatch* batch = pool_.Add(new RowBatch(*desc_, 1, &tracker_));
-  row_list.AddRowBatch(batch);
+  RowBatch* batch1 = pool_.Add(new RowBatch(*desc_, 1, &tracker_));
+  batch1->tuple_data_pool()->Allocate(ALLOC_SIZE);
+  DCHECK_EQ(ALLOC_SIZE, batch1->tuple_data_pool()->total_allocated_bytes());
+
+  row_list.AddRowBatch(batch1);
   EXPECT_EQ(row_list.total_num_rows(), 0);
   RowBatchList::TupleRowIterator it = row_list.Iterator();
   EXPECT_TRUE(it.AtEnd());
+
+  // IMPALA-4049: list should transfer resources attached to empty batch.
+  RowBatch* batch2 = pool_.Add(new RowBatch(*desc_, 1, &tracker_));
+  DCHECK_EQ(0, batch2->tuple_data_pool()->total_allocated_bytes());
+  row_list.TransferResourceOwnership(batch2);
+  DCHECK_EQ(0, batch1->tuple_data_pool()->total_allocated_bytes());
+  DCHECK_EQ(ALLOC_SIZE, batch2->tuple_data_pool()->total_allocated_bytes());
 }
 
 // This tests inserts 100 row batches of 1024 rows each to list.  It validates that they
